Reformat code following the hawkbit formatting rules
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>